# parall_prog

Lab01/: CMakeLists.txt
Lab01/Laba/ex1/: ex1_point3.f90  ex1_points12.f90  for_point3.ipynb  res.txt
Lab01/Laba/ex1/.ipynb_checkpoints/: for_point3-checkpoint.ipynb
Lab01/Laba/ex2/: different_threads_parse_ex2.f90  ex2_point1.f90  ex2_point4.f90  main_point1.f90  main_point2.f90  main_point4.f90  main_point5.f90  test_point5.f90
Lab01/Laba/ex3/: ex3.f90  main.f90  speed_test.f90
Lab01/Laba/ex4/: ex4.f90  main.f90  test.f90
Lab02/: CMakeLists.txt
Lab02/Lab02/: integrands.mod  plot.py  reduction.f90  reduction.mod  stats.mod  test_reduction.f90  test_trapezoidal.f90  trapezoidal_rule.f90  trapezoidal_rule.mod
Lab02/Lab02/lab02-stud/: Makefile  Makefile.bat
Lab02/Lab02/lab02-stud/data/: A.csv  B.csv  C.csv
Lab02/Lab02/lab02-stud/src/: matrix_multiplication.f90  threads.f90
Lab02/Lab02/lab02-stud/test/: test_matmul.f90  test_matmul_omp.f90  test_threads.f90
